--- a/My Projects/facebook-clone/src/index.css
+++ b/My Projects/facebook-clone/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-  @apply font-basic;
+  @apply font-primary;
 }
 
 .vertical-align {
@@ -30,7 +30,7 @@ div#home input {
 
 hr {
   border: solid 0.1px #dadde1;
-  width: 97%;
+  width: 100%;
   color: #dadde1;
   height: 1px;
 }
