--- a/My Projects/facebook-clone/src/index.css
+++ b/My Projects/facebook-clone/src/index.css
@@ -19,6 +19,13 @@ input[type="password"] {
   @apply border-none outline-none w-full;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 hr {
   border: solid 0.1px #dadde1;
   width: 100%;
