--- a/My Projects/facebook-clone/src/pages/Home/Home.css
+++ b/My Projects/facebook-clone/src/pages/Home/Home.css
@@ -31,3 +31,11 @@ li:hover {
 .cover-photo div {
   @apply horizontal-align items-center !font-homePrimary mb-1 hover:bg-[#f3f3f3] rounded-[6px] px-1;
 }
+
+.profile-photo {
+  @apply vertical-align text-[#050505] font-[500] cursor-pointer;
+}
+
+.profile-photo div {
+  @apply horizontal-align items-center !font-homePrimary mb-1 hover:bg-[#f3f3f3] rounded-[6px] px-1;
+}
