--- a/My Projects/facebook-clone/src/index.css
+++ b/My Projects/facebook-clone/src/index.css
@@ -4,15 +4,15 @@
 
 @layer components {
   .btn-primary {
-    @apply bg-blue py-2 text-white text-[15px] font-[600] rounded-[6px] flex flex-row items-center;
+    @apply bg-blue py-2 text-white text-primary font-[600] rounded-[6px] flex flex-row items-center;
   }
 
   .btn-secondary {
-    @apply bg-grey py-2 text-black text-[15px] font-[600] rounded-[6px] flex flex-row items-center hover:bg-[#e3e5e7];
+    @apply bg-grey py-2 text-black text-primary font-[600] rounded-[6px] flex flex-row items-center hover:bg-[#e3e5e7];
   }
 
   .btn-transparent {
-    @apply bg-transparent py-2 text-[15px] font-[600] rounded-[6px] hover:bg-[#f3f3f3];
+    @apply bg-transparent py-2 text-primary font-[600] rounded-[6px] hover:bg-[#f3f3f3];
   }
 }
 
@@ -47,4 +47,16 @@ hr {
 button[disabled] {
   opacity: 40%;
   cursor: not-allowed;
+}
+
+h1 {
+  @apply text-lg font-bold;
+}
+
+h2 {
+  @apply text-md font-bold;
+}
+
+h3 {
+  @apply text-sm font-bold;
 }
