--- a/Udemy/Maximilian Schwarzmüller/01-starting-project-4/src/components/Header.module.css
+++ b/Udemy/Maximilian Schwarzmüller/01-starting-project-4/src/components/Header.module.css
@@ -1,4 +1,4 @@
-header {
+/* header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,4 +44,4 @@ header p {
 
 .green{
     color: green;
-}
+} */
